public/css/style.css
html, body {
    height: 100%;
    margin: 0;

    font-size: 16px;
    font-family: 'Lato', sans-serif;
    /* 'Comic Neue', cursive; */
    /* -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; */
    -webkit-font-smoothing: antialiased;
    background: white; /* Old browsers */

    background-size: cover;
    background-repeat: no-repeat;
}

#serviiris-web-app {
    display: flex;
    flex-flow: column;
    height: 100%;
}

.padding-side-0 {
    padding-right:0;
    padding-left:0;
}

.bg-transparent {
    background-color: transparent;
}


.bg-iris-yellow {
    background-color: #FFF308;
}

.bg-iris-purple {
    background-color: #5425BA;
}

html, body {
    width: 100%;
    height: 100%;
  }
  
  article {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
  }
  
  main {
    flex-grow: 1;
  }
  
  header, main, footer {
    flex-shrink: 0;
  }

